[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphloom"
version = "0.1.0"
description = "GraphLoom: Controlled Evidence Injection for Interleaved KG-RAG in Multimodal QA"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "GraphLoom Team", email = "graphloom@example.com"}
]
keywords = [
    "multimodal",
    "question-answering",
    "knowledge-graph",
    "RAG",
    "retrieval-augmented-generation",
    "vision-language",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
lightweight = [
    "sentence-transformers>=2.2.0",
    "spacy>=3.0.0",
]
full = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "sentence-transformers>=2.2.0",
    "spacy>=3.0.0",
    "qwen-vl-utils>=0.0.2",
    "accelerate>=0.20.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/graphloom/graphloom"
Documentation = "https://github.com/graphloom/graphloom#readme"
Repository = "https://github.com/graphloom/graphloom"

[tool.setuptools.packages.find]
where = ["."]
include = ["graphloom*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104", "D107"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
